Add reverse-frame-stepping to the movie player

** DEBUG version **

https://bugzilla.gnome.org/show_bug.cgi?id=595958