src/totem-object.c
@@ -3537,9 +3537,13 @@ totem_action_handle_key_press (Totem *totem, GdkEventKey *event)
 			totem_action_play_pause (totem);
 		}
 		break;
+	case GDK_comma:
+		totem_action_pause (totem);
+		bacon_video_widget_step (totem->bvw, FALSE, NULL);
+		break;
 	case GDK_period:
 		totem_action_pause (totem);
-		bacon_video_widget_step (totem->bvw, NULL);
+		bacon_video_widget_step (totem->bvw, TRUE, NULL);
 		break;
 #ifdef HAVE_XFREE
 	case XF86XK_AudioPause:
